assets/css/style.css
@font-face {
	font-family: 'Bellota-LightItalic';
	src: url(../fonts/Bellota-LightItalic.otf);
}

@font-face {
	font-family: 'Bellota-BoldItalic';
	src: url(../fonts/Bellota-BoldItalic.otf);
}

body {
    line-height: 17px;
    background-color: #e6eae8;
}

.top_bar {
    width: 100%;
    min-width: 1050px;
    height: 40px;
	background-color: #39c8ba;
    border-bottom: 0.25em solid #7898d5;
    margin: 0 0 10px 0;
    display: inline-flex;
    position: fixed;
    z-index: 10px;
}

.logo a{
    font-family: 'Bellota-BoldItalic', sans-serif;
    margin-left: 10px;
    font-size: 30px;
    position: relative;
    top: 9px;
    color: #4a6eb3;
    text-shadow: #bfe8ea 0.5px 0.5px 0px;
}

a:hover {
    text-decoration: none;
}

nav {
    float: right;
    right: 1px;
    position: absolute;
    margin: 10px;
}

nav a{
    font-family: 'Bellota-BoldItalic', sans-serif;
    font-weight: bold;
    position: relative;
    color: #fff;
    text-decoration: none;
    font-size: 17px;
}

nav a:hover {
    border-bottom: 7px solid #ff944c;
    color: #fff;
}

.wrapper {
    margin: 0 auto;
    top: 50px;
    position: relative;
    padding: 0 10px;
    width: 75%;
    min-width: 950px;
}

.column {
    background-color: #fff;
    padding: 10px;    
    border: 1px solid #d3d3d3;    
    border-radius: 5px;    
    box-shadow: 2px 2px 1px #d3d3d3;    
    z-index: -1;
}

.user_details {
    width: 20%;
    float: left;
    margin-bottom: 20px;
}

.user_details img {
    height: 125px;
    border-radius: 5px;
    margin-right: 5px;
}

.user_details_left_right {
    width: 125px;
    display: inline-block;
    position: absolute;
}

.main_column {
    float: right;
    width: 75%;
    z-index: -1;
    min-height: 160px;
}

.post_form {
    width: 100%;
}

.post_form textarea {
    width: 81%;
    height: 60px;
    border-radius: 3px;
    margin-right: 5px;
    border: 1px solid #d3ded3;
    font-size: 12px;
    padding: 5px;
}

textarea:focus {
    outline: 0;
}

.post_form input[type="submit"] {
    width: 11%;
    height: 60px;
    border: none;
    border-radius: 3px;
    background-color: #39c8b2;
    font-family: 'Bellota-BoldItalic', sans-serif;
    color: #7898d5;
    text-shadow: #bfe8ea 0.5px 0.5px 0px;
    font-size: 120%;
    position: absolute;
    outline: 0;
    margin: 0;
}

.post_form input[type="submit"]:active {
    padding: 5px 4px 4px 5px;
    background-color: #38af9d;
}

